// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders correctly 1`] = `
<Box
  className=""
>
  Test
</Box>
`;

exports[`Box renders correctly with Helpers 1`] = `
<Box
  className="margin-t-small type-big bg-brand"
>
  Test
</Box>
`;
